--- a/aoc2016.cabal
+++ b/aoc2016.cabal
@@ -74,6 +74,7 @@ library
     , mtl
     , optparse-applicative
     , parser-combinators
+    , pureMD5
     , text
     , time
     , vector
@@ -104,6 +105,7 @@ executable aoc-template-exe
     , mtl
     , optparse-applicative
     , parser-combinators
+    , pureMD5
     , text
     , time
     , vector
